# buildtovalue-governance

./:  .gitignore  .bandit  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGELOG.pt.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  PRODUCT_SCOPE.md  README.md  README.pt.md  SECURITY.md  docker-compose.secure.yml  docker-compose.yml  estruturaArquivosInicial.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/:  API_REFERENCE.pt.md  API_REFERENCE.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE.pt.md  MULTI_TENANT_DESIGN.md  MULTI_TENANT_DESIGN.pt.md
docs/articles/: 01_fintech_case_study.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.0.pt.md
docs/compliance/: EU_AI_ACT_COMPLIANCE.md  EU_AI_ACT_COMPLIANCE.pt.md  FRAMEWORK_READINESS.md  ISO_42001_MAPPING.md  NIST_AI_RMF_COMPATIBILITY.md  NIST_AI_RMF_COMPATIBILITY.pt.md
docs/guides/: DEPLOYMENT.md  QUICK_START.md  QUICK_START.pt.md
examples/: banking_tenant.json  healthcare_tenant.json  simple_usage.py
examples/simulations/: EDUCATION_EXPERIMENTAL.md  README.md  education_simulation.py  fintech_simulation.py  healthcare_simulation.py  hr_simulation.py  infrastructure_simulation.py
nginx/: nginx.conf
reports/: compliance_v0.9.5.3.html  compliance_v0.9.5.3.json  compliance_v0.9.5.3.md  multi_sector_results.html  multi_sector_results.json
scripts/: README.md  README.pt.md  audit_rag_memory.py  cleanup_project.py  cleanup_tests.py  debug_enforcement_decisions.py  debug_missed_threats.py  generate_compliance_report.py  generate_token.py  rotate_secrets.ps1  rotate_secrets.sh  run_fintech_simulation.py  run_fintech_simulation_debug.py  run_multi_sector_simulation.py  setup_dev_env.ps1  setup_dev_env.sh  test_individual_prompts.py  validate_ledger.py
scripts/simulations/: base_simulation.py  education_simulation.py  government_simulation.py  healthcare_simulation.py  hr_simulation.py  infrastructure_simulation.py
src/: init.py
src/buildtovalue.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/compliance/: __init__.py
src/compliance/analytics/: init.py  rag_memory.py
src/config/: governance.yaml  regulatory_penalties.yaml
src/core/: __init__.py  init.py
src/core/governance/: __init__.py  enforcement.py  init.py  sector_safe_patterns.py  threat_classifier.py
src/core/registry/: init.py  system_registry.py
src/domain/: __init__.py  entities.py  enums.py
src/intelligence/: __init__.py
src/intelligence/routing/: __init__.py  adaptive_router.py
src/interface/: init.py
src/interface/api/: __init__.py  auth.py  gateway.py
src/interface/human_oversight/: __init__.py  dashboard.py
tests/: TEST_COVERAGE_JUSTIFICATION.md  TEST_STATUS_v0.9.0.md  conftest.py  test_debug_fairness.py  test_enforcement_v095.py  test_threat_classifier.py  test_threat_classifier_v095.py  test_threat_classifier_v095_debug.py
tests/security/: test_auth.py  test_bola.py  test_injection.py
tests/unit/: test_enforcement.py  test_enforcement_v095.py  test_entities.py  test_threat_classifier_v095.py
